--- a/nomads_download.Rmd
+++ b/nomads_download.Rmd
@@ -9,8 +9,8 @@ This document will be used within a cron job to update National Water Model fore
 First, we will source the needed functions:
 
 ```{r}
-source("./get_nomads_filelist.R")
-source("./download_nomads.R")
+source("./R/get_nomads_filelist.R")
+source("./R/download_nomads.R")
 ```
 
 Then, get a list of most current files on the NOMADs server
@@ -24,14 +24,16 @@ Finally we will check if files need to be updated, and, if so, downloaded:
 ```{r}
 files = list.files("./flowline-app/data/current_nc", full.names = TRUE)
 
+testFiles = paste0(fileList[[1]], basename(fileList[[2]]))
+
 # remove the files not in the list from folder
-file.remove(files[!(basename(files) %in% basename(fileList))])
+file.remove(files[!(basename(files) %in% testFiles)])
 
 # remove files in the folder from the file list
 
-fileList = fileList[!(basename(fileList) %in% basename(files))]
+fileList = fileList[[2]][!(testFiles %in% basename(files))]
 
-if(length(fileList) > 0){
+if(length(fileList > 0)){
   download_nomads(fileList = fileList)
 }else {
   message("No Download needed...")
