--- a/nomads_download.Rmd
+++ b/nomads_download.Rmd
@@ -31,9 +31,9 @@ file.remove(files[!(basename(files) %in% testFiles)])
 
 # remove files in the folder from the file list
 
-fileList = fileList[[2]][!(testFiles %in% basename(files))]
+fileList[[2]] = fileList[[2]][!(testFiles %in% basename(files))]
 
-if(length(fileList > 0)){
+if(length(fileList[[2]] > 0)){
   download_nomads(fileList = fileList)
 }else {
   message("No Download needed...")
