--- a/nomads_download.Rmd
+++ b/nomads_download.Rmd
@@ -1,59 +1,38 @@
 ---
-title: "Get NOMADs"
+title: "FlowlineFinder Download NOMADs"
 theme: flatly
 output: html_document
 ---
 
 This document will be used within a cron job to update National Water Model forecasts for the FlowlineFinder application:
 
-First, we will source the needed functions:
-
-```{r}
+```{r, echo = FALSE}
 library(ncdf4)
 source("./R/get_nomads_filelist.R")
 source("./R/download_nomads_rda.R")
 ```
 
-Then, get a list of most current files on the NOMADs server
+First, get a list of most current files on the NOMADs server:
 
-```{r}
+```{r, echo = FALSE}
 fileList = get_nomads_filelist(num  = 6)
+message("Date:\n", fileList$date, "\n\nTime:\n",fileList$startTime, "\n\nFiles:\n",
+paste(basename(fileList$urls), collapse  ="\n"), "\n\n")
 ```
 
-Finally we will check if files need to be updated, and, if so, downloaded:
+Check if files need to be updated, and, if so, download them:
 
-```{r}
+```{r, echo = FALSE}
 
-load("./flows.rda")
+load("./flowline-app/data/current_nc/flows.rda")
 
-if(!all(
+if(all(
   fileList$date == nwm$date,
   fileList$startTime == nwm$time
 )){
-
-#files = list.files("./flowline-app/data/current_nc", full.names = TRUE )
-
-#files = drop_dir('current_nc')
-
-#testFiles = paste0(fileList[[1]], basename(fileList[[3]]))
-
-# remove the files not in the list from folder
-#file.remove(files[!(basename(files) %in% testFiles)])
-
-#bad = files$name[!(files$name %in% testFiles)]
-#for(i in seq_along(bad)){
-#drop_delete(bad[i])
-#}
-
-# remove files in the folder from the file list
-#fileList[[3]] = fileList[[3]][!(testFiles %in% basename(files))]
-
-#fileList[[3]] = fileList[[3]][!(testFiles %in% files$name)]
-
-#if(length(fileList[[3]] > 0)){
-  download_nomads_rda(fileList = fileList)
-} else {
   message("No Download needed...")
+} else {
+  download_nomads_rda(fileList)
 }
 
 ```
